Currency select fix at review section. Queries intend for review on mobile.

--- a/styles/queries-phone.css
+++ b/styles/queries-phone.css
@@ -83,4 +83,14 @@
     margin: unset;
     align-self: unset;
   }
+
+  .product-wrapper,
+  .reviews-wrapper {
+    width: 90%;
+  }
+
+  .reviews-wrapper {
+    margin: unset;
+    align-self: unset;
+  }
 }
