--- a/styles/review.css
+++ b/styles/review.css
@@ -48,6 +48,7 @@
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
   padding: 10px;
   width: 60%;
+  align-self: flex-start;
 }
 
 .review-wrapper {
